@@ -1,0 +1,219 @@
+# Copyright (c) 2013,  Joerg Wunsch
+# All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+#
+# * Redistributions of source code must retain the above copyright
+#   notice, this list of conditions and the following disclaimer.
+# * Redistributions in binary form must reproduce the above copyright
+#   notice, this list of conditions and the following disclaimer in
+#   the documentation and/or other materials provided with the
+#   distribution.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+# POSSIBILITY OF SUCH DAMAGE.
+#
+# $Id$
+#
+
+EXTRA_DIST = \
+	at43usb320.S \
+	at43usb355.S \
+	at76c711.S \
+	at86rf401.S \
+	at90c8534.S \
+	at90can128.S \
+	at90can32.S \
+	at90can64.S \
+	at90pwm1.S \
+	at90pwm2.S \
+	at90pwm216.S \
+	at90pwm2b.S \
+	at90pwm3.S \
+	at90pwm316.S \
+	at90pwm3b.S \
+	at90pwm81.S \
+	at90s1200.S \
+	at90s2313.S \
+	at90s2323.S \
+	at90s2333.S \
+	at90s2343.S \
+	at90s4414.S \
+	at90s4433.S \
+	at90s4434.S \
+	at90s8515.S \
+	at90s8535.S \
+	at90scr100.S \
+	at90usb1286.S \
+	at90usb1287.S \
+	at90usb162.S \
+	at90usb646.S \
+	at90usb647.S \
+	at90usb82.S \
+	at94k.S \
+	ata6289.S \
+	atmega103.S \
+	atmega128.S \
+	atmega1280.S \
+	atmega1281.S \
+	atmega1284p.S \
+	atmega1284rfr2.S \
+	atmega128rfa1.S \
+	atmega128rfr2.S \
+	atmega16.S \
+	atmega161.S \
+	atmega162.S \
+	atmega163.S \
+	atmega164a.S \
+	atmega164p.S \
+	atmega165.S \
+	atmega165a.S \
+	atmega165p.S \
+	atmega168.S \
+	atmega168a.S \
+	atmega168p.S \
+	atmega169.S \
+	atmega169a.S \
+	atmega169p.S \
+	atmega169pa.S \
+	atmega16a.S \
+	atmega16hva.S \
+	atmega16hva2.S \
+	atmega16hvb.S \
+	atmega16hvbrevb.S \
+	atmega16m1.S \
+	atmega16u2.S \
+	atmega16u4.S \
+	atmega2560.S \
+	atmega2561.S \
+	atmega2564rfr2.S \
+	atmega256rfr2.S \
+	atmega32.S \
+	atmega323.S \
+	atmega324a.S \
+	atmega324p.S \
+	atmega324pa.S \
+	atmega325.S \
+	atmega3250.S \
+	atmega3250a.S \
+	atmega3250p.S \
+	atmega325a.S \
+	atmega325p.S \
+	atmega328.S \
+	atmega328p.S \
+	atmega329.S \
+	atmega3290.S \
+	atmega3290a.S \
+	atmega3290p.S \
+	atmega329a.S \
+	atmega329p.S \
+	atmega329pa.S \
+	atmega32c1.S \
+	atmega32hvb.S \
+	atmega32hvbrevb.S \
+	atmega32m1.S \
+	atmega32u2.S \
+	atmega32u4.S \
+	atmega32u6.S \
+	atmega406.S \
+	atmega48.S \
+	atmega48a.S \
+	atmega48p.S \
+	atmega64.S \
+	atmega640.S \
+	atmega644.S \
+	atmega644a.S \
+	atmega644p.S \
+	atmega644pa.S \
+	atmega644rfr2.S \
+	atmega645.S \
+	atmega6450.S \
+	atmega6450a.S \
+	atmega6450p.S \
+	atmega645a.S \
+	atmega645p.S \
+	atmega649.S \
+	atmega6490.S \
+	atmega6490a.S \
+	atmega6490p.S \
+	atmega649a.S \
+	atmega649p.S \
+	atmega64c1.S \
+	atmega64hve.S \
+	atmega64m1.S \
+	atmega64rfr2.S \
+	atmega8.S \
+	atmega8515.S \
+	atmega8535.S \
+	atmega88.S \
+	atmega88a.S \
+	atmega88p.S \
+	atmega88pa.S \
+	atmega8hva.S \
+	atmega8u2.S \
+	attiny10.S \
+	attiny11.S \
+	attiny12.S \
+	attiny13.S \
+	attiny13a.S \
+	attiny15.S \
+	attiny167.S \
+	attiny20.S \
+	attiny22.S \
+	attiny2313.S \
+	attiny2313a.S \
+	attiny24.S \
+	attiny24a.S \
+	attiny25.S \
+	attiny26.S \
+	attiny261.S \
+	attiny261a.S \
+	attiny28.S \
+	attiny4.S \
+	attiny40.S \
+	attiny4313.S \
+	attiny43u.S \
+	attiny44.S \
+	attiny44a.S \
+	attiny45.S \
+	attiny461.S \
+	attiny461a.S \
+	attiny48.S \
+	attiny5.S \
+	attiny84.S \
+	attiny84a.S \
+	attiny85.S \
+	attiny861.S \
+	attiny861a.S \
+	attiny87.S \
+	attiny88.S \
+	attiny9.S \
+	atxmega128a1.S \
+	atxmega128a1u.S \
+	atxmega128a3.S \
+	atxmega128d3.S \
+	atxmega16a4.S \
+	atxmega16d4.S \
+	atxmega192a3.S \
+	atxmega192d3.S \
+	atxmega256a3.S \
+	atxmega256a3b.S \
+	atxmega256d3.S \
+	atxmega32a4.S \
+	atxmega32d4.S \
+	atxmega64a1.S \
+	atxmega64a1u.S \
+	atxmega64a3.S \
+	atxmega64d3.S \
+	m3000.S \
+	template.S
